--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "nodemon": "^1.17.5"
+  },
+  "dependencies": {
+    "express": "^4.16.3"
   }
 }
